Fixes Search step image height when using VNC.
The thumbnails on the search listing page were too large after an
update, because they didn't have the anatomical region information to
determine which orientation to draw the thumbnails.

--- a/src/components/CustomSearch/SearchSteps.less
+++ b/src/components/CustomSearch/SearchSteps.less
@@ -6,10 +6,12 @@
 
 .completeThumbnail {
   width: 150px;
+  height: auto;
 }
 
 .verticalThumbnail {
-  width: 80px;
+  height: 150px;
+  width: auto;
   margin-left: 35px;
 }
 
